@@ -8,6 +8,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Service
 public class UserServiceImpl implements UserService{
@@ -26,7 +27,7 @@ public class UserServiceImpl implements UserService{
                 registrationDto.getLastName(),
                 registrationDto.getEmail(),
                 registrationDto.getPassword(),
-                Arrays.asList(new Role("ROLE_USER"))
+                List.of(new Role("ROLE_USER"))
         );
 
         return userRepository.save(user);
